vendored_parsers/tree-sitter-cmake/test/corpus/regression.txt
======
OpenCV
======

if(dep MATCHES "^\\$<LINK_ONLY:([^>]+)>$")
       set(dep "${CMAKE_MATCH_1}")
 endif()
if(dep MATCHES "^\\$<")
       message(WARNING "Unexpected CMake generator expression: ${dep}")
endif()

---

(source_file
  (if_condition
    (if_command
      (if)
      (argument_list
        (argument
          (unquoted_argument))
        (argument
          (unquoted_argument))
        (argument
          (quoted_argument
            (quoted_element
              (escape_sequence))))))
    (body
      (normal_command
        (identifier)
        (argument_list
          (argument
            (unquoted_argument))
          (argument
            (quoted_argument
              (quoted_element
                (variable_ref
                  (normal_var
                    (variable)))))))))
    (endif_command
      (endif)))
    (if_condition
      (if_command
        (if)
        (argument_list
          (argument
            (unquoted_argument))
          (argument
            (unquoted_argument))
          (argument
            (quoted_argument
              (quoted_element
                (escape_sequence))))))
      (body
        (normal_command
          (identifier)
          (argument_list
            (argument
              (unquoted_argument))
            (argument
              (quoted_argument
                (quoted_element
                  (variable_ref
                    (normal_var
                      (variable)))))))))
    (endif_command
      (endif))))
